force-app/main/default/objects/Case/fields/Address1__c.field-meta.xml
<CustomField>
    <fullName>Address1__c</fullName>
    <description>Primary Address which consists of street, suburb, state, country</description>
    <label>Sender Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>