force-app/main/default/objects/Case/fields/Address1Country__c.field-meta.xml
<CustomField>
    <fullName>Address1Country__c</fullName>
    <description>SSSW</description>
    <label>Sender Address Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>