force-app/main/default/objects/Case/fields/Address1DPID__c.field-meta.xml
<CustomField>
    <fullName>Address1DPID__c</fullName>
    <description>2014-07 CCU</description>
    <label>Sender Address DPID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>