force-app/main/default/objects/Case/fields/Address1Line1__c.field-meta.xml
<CustomField>
    <fullName>Address1Line1__c</fullName>
    <label>Addressee Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>