force-app/main/default/objects/Case/fields/Address1line2__c.field-meta.xml
<CustomField>
    <fullName>Address1line2__c</fullName>
    <description>Address line 2, SSSW</description>
    <label>Sender Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>