force-app/main/default/objects/Case/fields/Address1Postcode__c.field-meta.xml
<CustomField>
    <fullName>Address1Postcode__c</fullName>
    <description>SSSW</description>
    <label>Sender Address Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>