force-app/main/default/objects/Case/fields/Address1State__c.field-meta.xml
<CustomField>
    <fullName>Address1State__c</fullName>
    <description>SSSW</description>
    <label>Sender Address State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>