force-app/main/default/objects/Case/fields/Address1Suburb__c.field-meta.xml
<CustomField>
    <fullName>Address1Suburb__c</fullName>
    <description>SSSW</description>
    <label>Sender Address Suburb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>