force-app/main/default/objects/Case/fields/Address2__c.field-meta.xml
<CustomField>
    <fullName>Address2__c</fullName>
    <description>Secondary address which consists of street, suburb, state and country</description>
    <label>Addressee Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>