force-app/main/default/objects/Case/fields/Address2Country__c.field-meta.xml
<CustomField>
    <fullName>Address2Country__c</fullName>
    <description>SSSW</description>
    <label>Addressee Address Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>