force-app/main/default/objects/Case/fields/Address2DPID__c.field-meta.xml
<CustomField>
    <fullName>Address2DPID__c</fullName>
    <description>2014-07 CCU</description>
    <label>Addressee Address DPID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>