force-app/main/default/objects/Case/fields/Address2Line1__c.field-meta.xml
<CustomField>
    <fullName>Address2Line1__c</fullName>
    <label>Sender Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>