force-app/main/default/objects/Case/fields/Address2State__c.field-meta.xml
<CustomField>
    <fullName>Address2State__c</fullName>
    <description>SSSW</description>
    <label>Addressee Address State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>