force-app/main/default/objects/Case/fields/Address2Suburb__c.field-meta.xml
<CustomField>
    <fullName>Address2Suburb__c</fullName>
    <description>SSSW</description>
    <label>Addressee Address Suburb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>