force-app/main/default/objects/Case/fields/Address3__c.field-meta.xml
<CustomField>
    <fullName>Address3__c</fullName>
    <label>Sender Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>