force-app/main/default/objects/Case/fields/Address3Country__c.field-meta.xml
<CustomField>
    <fullName>Address3Country__c</fullName>
    <label>Sender Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>