force-app/main/default/objects/Case/fields/Address3Postcode__c.field-meta.xml
<CustomField>
    <fullName>Address3Postcode__c</fullName>
    <label>Sender Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>