force-app/main/default/objects/Case/fields/Address3State__c.field-meta.xml
<CustomField>
    <fullName>Address3State__c</fullName>
    <label>Sender State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>