force-app/main/default/objects/Case/fields/Address3Suburb__c.field-meta.xml
<CustomField>
    <fullName>Address3Suburb__c</fullName>
    <label>Sender Suburb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>