force-app/main/default/objects/Case/fields/AgentType__c.field-meta.xml
<CustomField>
    <fullName>AgentType__c</fullName>
    <description>This field will be populated via backend processing so that when a SSSW Case is assigned to a BOH queue, the Agent Type will automatically be set to BOH.  Likewise, when a SSSW Case is assigned to a FOH queue, the Agent Type will automatically be set to FOH.</description>
    <inlineHelpText>This field will be populated via backend processing so that when a SSSW Case is assigned to a BOH queue, the Agent Type will automatically be set to BOH.  Likewise, when a SSSW Case is assigned to a FOH queue, the Agent Type will automatically be set to FOH.</inlineHelpText>
    <label>Agent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BOH</fullName>
            </value>
            <value>
                <fullName>FOH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>