force-app/main/default/objects/Case/fields/AllocateToQueue__c.field-meta.xml
<CustomField>
    <fullName>AllocateToQueue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SSSW - This Field is used to fire the Workflow to allocate the Case back to the correct Queue.</description>
    <label>Allocate to Queue</label>
    <type>Checkbox</type>
</CustomField>