force-app/main/default/objects/Case/fields/AMLCTF_Number_Of_Audit_Programs__c.field-meta.xml
<CustomField>
    <fullName>AMLCTF_Number_Of_Audit_Programs__c</fullName>
    <description>Field to indicate number of Audit Program child records. Field added as part of the Retail Audit Case Management Solution, AML/CTF Austrac Phase 2.</description>
    <label>Number Of Audit Programs</label>
    <summaryForeignKey>AMLCTF_Audit_Program__c.AMLCTF_Audit_Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>