force-app/main/default/objects/Case/fields/AMLCTF_Surplus_or_Shortfall_Amount__c.field-meta.xml
<CustomField>
    <fullName>AMLCTF_Surplus_or_Shortfall_Amount__c</fullName>
    <description>Field indicating dollar amount of Shortfall or Surplus encountered in an Unannounced Audit. Part of the Retail Audit Case Management Solution, AML/CTF Austrac Phase 2.</description>
    <inlineHelpText>Field indicating dollar amount of Shortfall or Surplus encountered in an Unannounced Audit. Part of the Retail Audit Case Management Solution, AML/CTF Austrac Phase 2.</inlineHelpText>
    <label>Surplus or Shortfall Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>