force-app/main/default/objects/Case/fields/Approval_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Received_Date__c</fullName>
    <description>Used by CDMT - Sales Director Approval date for Acc Restructure/Merger</description>
    <label>Approval Received Date</label>
    <type>DateTime</type>
</CustomField>