force-app/main/default/objects/Case/fields/APT_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>APT_Agreement_Date__c</fullName>
    <label>Agreement Date</label>
    <type>Date</type>
</CustomField>