force-app/main/default/objects/Case/fields/APT_Approved_ABN__c.field-meta.xml
<CustomField>
    <fullName>APT_Approved_ABN__c</fullName>
    <label>Approved ABN</label>
    <type>TextArea</type>
</CustomField>