force-app/main/default/objects/Case/fields/APT_Approved_Entities__c.field-meta.xml
<CustomField>
    <fullName>APT_Approved_Entities__c</fullName>
    <label>Approved Entities</label>
    <type>TextArea</type>
</CustomField>