force-app/main/default/objects/Case/fields/APT_Contract__c.field-meta.xml
<CustomField>
    <fullName>APT_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Apttus Contract</inlineHelpText>
    <label>Contract</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>