force-app/main/default/objects/Case/fields/APT_Contract_Owner__c.field-meta.xml
<CustomField>
    <fullName>APT_Contract_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases5JB6_del</relationshipName>
    <type>Lookup</type>
</CustomField>