force-app/main/default/objects/Case/fields/APT_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>APT_Contract_Type__c</fullName>
    <label>Contract Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>