force-app/main/default/objects/Case/fields/APT_GA_Codes__c.field-meta.xml
<CustomField>
    <fullName>APT_GA_Codes__c</fullName>
    <label>GA Code(s)</label>
    <length>55</length>
    <type>Text</type>
</CustomField>