force-app/main/default/objects/Case/fields/APT_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>APT_Payment_Terms__c</fullName>
    <inlineHelpText>14 days by Electronic funds Transfer
21 days by Direct Debit
30 days (Please Contact Credit Officer to obtain approval)</inlineHelpText>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>14 days</fullName>
                <default>true</default>
                <label>14 days</label>
            </value>
            <value>
                <fullName>21 days</fullName>
            </value>
            <value>
                <fullName>30 days</fullName>
                <isActive>false</isActive>
                <label>30 days</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>