force-app/main/default/objects/Case/fields/APT_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>APT_Product_Group__c</fullName>
    <description>.</description>
    <label>Product Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>