force-app/main/default/objects/Case/fields/Article_Event_Codes__c.field-meta.xml
<CustomField>
    <fullName>Article_Event_Codes__c</fullName>
    <description>List of Event Codes that have occurred for the Cases Article after creation.</description>
    <label>Article Event Codes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>