force-app/main/default/objects/Case/fields/Article_Expected_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Article_Expected_Delivery_Date__c</fullName>
    <description>StarTrack - Article Expected Delivery Date</description>
    <formula>DATETIMEVALUE(ArticleTest__r.ExpectedDeliveryDate__c) + IF(CONTAINS($Setup.StarTrack_Settings__c.Billing_Account_IDs__c, ArticleTest__r.Billing_Account__c),
12/24, 17/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Delivery Date</label>
    <type>DateTime</type>
</CustomField>