force-app/main/default/objects/Case/fields/Article_Receiver_Address__c.field-meta.xml
<CustomField>
    <fullName>Article_Receiver_Address__c</fullName>
    <description>StarTrack Article Receiver Address field will be used to store the Receiver Address field value found in the related Article record.</description>
    <formula>IF(No_Data_Consignment__c,Address4__c,ArticleTest__r.ReceiverAddress__c)</formula>
    <label>Receiver Address</label>
    <type>Text</type>
</CustomField>