force-app/main/default/objects/Case/fields/Article_Receiver_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Article_Receiver_Postcode__c</fullName>
    <description>StarTrack Article Receiver Postcode field will be used to store the Receiver Postcode field value found in the related Article record.</description>
    <formula>IF(No_Data_Consignment__c,Address4Postcode__c,ArticleTest__r.ReceiverPostcode__c)</formula>
    <label>Receiver Postcode</label>
    <type>Text</type>
</CustomField>