force-app/main/default/objects/Case/fields/Article_Receiver_Suburb__c.field-meta.xml
<CustomField>
    <fullName>Article_Receiver_Suburb__c</fullName>
    <description>StarTrack Article Receiver Suburb field will be used to store the Receiver Suburb field value found in the related Article record.</description>
    <formula>IF(No_Data_Consignment__c,Address4Suburb__c,ArticleTest__r.Receiver_Suburb__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receiver Suburb</label>
    <type>Text</type>
</CustomField>