force-app/main/default/objects/Case/fields/Article_Sender_Address__c.field-meta.xml
<CustomField>
    <fullName>Article_Sender_Address__c</fullName>
    <description>StarTrack Article Sender Address field will be used to store the Sender Address field value found in the related Article record.</description>
    <formula>IF( No_Data_Consignment__c,Address1__c, ArticleTest__r.SenderAddress__c)</formula>
    <label>Sender Address</label>
    <type>Text</type>
</CustomField>