force-app/main/default/objects/Case/fields/Article_Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>Article_Sender_Name__c</fullName>
    <description>StarTrack Article Sender Name field will be used to store the Sender Name field value found in the related Article record.</description>
    <formula>IF( No_Data_Consignment__c,Primary_Name__c,ArticleTest__r.SenderName__c)</formula>
    <label>Sender Name</label>
    <type>Text</type>
</CustomField>