force-app/main/default/objects/Case/fields/Article_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Article_Service_Type__c</fullName>
    <description>StarTrack Article Service Type field will be used to store the Service Type field value found in the related Article record.</description>
    <formula>IF(No_Data_Consignment__c,TEXT(Service_Type__c),ArticleTest__r.Service_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Type</label>
    <type>Text</type>
</CustomField>