force-app/main/default/objects/Case/fields/ArticleCubing__c.field-meta.xml
<CustomField>
    <fullName>ArticleCubing__c</fullName>
    <formula>ArticleTest__r.Cubing__c</formula>
    <label>Cubing (cm3)</label>
    <type>Text</type>
</CustomField>