force-app/main/default/objects/Case/fields/ArticleTest__c.field-meta.xml
<CustomField>
    <fullName>ArticleTest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Article</label>
    <referenceTo>Article__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>