force-app/main/default/objects/Case/fields/ArticleType__c.field-meta.xml
<CustomField>
    <fullName>ArticleType__c</fullName>
    <description>Used for Contact Us Form
2014-05 CCU - Changed from multi-picklist to picklist as per instructed</description>
    <label>Article Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>Parcel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>