force-app/main/default/objects/Case/fields/ArticleWeight__c.field-meta.xml
<CustomField>
    <fullName>ArticleWeight__c</fullName>
    <label>Article Weight</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>