force-app/main/default/objects/Case/fields/ATL__c.field-meta.xml
<CustomField>
    <fullName>ATL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ATL</description>
    <label>ATL</label>
    <type>Checkbox</type>
</CustomField>