force-app/main/default/objects/Case/fields/ATL_Update_Flag__c.field-meta.xml
<CustomField>
    <fullName>ATL_Update_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>StarTrack ATL Update Flag field will determine if the ATL Publisher Action button was hit.</description>
    <label>LDC Approved or Rejected?</label>
    <type>Checkbox</type>
</CustomField>