force-app/main/default/objects/Case/fields/Auto_Email_Response_sent__c.field-meta.xml
<CustomField>
    <fullName>Auto_Email_Response_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>StarTrack field used by logic to ensure that only 1 Email response is sent for Delivery Enquiries. (Used due to  business logic preventing Process Builder from using &quot;on create&quot; / ISNew )</description>
    <label>Auto Email Response sent?</label>
    <type>Checkbox</type>
</CustomField>