force-app/main/default/objects/Case/fields/Automated_Network_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Automated_Network_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if a case is eligible for network assignment</description>
    <label>Automated Network Assignment</label>
    <type>Checkbox</type>
</CustomField>