force-app/main/default/objects/Case/fields/Barcode__c.field-meta.xml
<CustomField>
    <fullName>Barcode__c</fullName>
    <description>Text field for barcode for Startrack Rebranding</description>
    <label>Barcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>