force-app/main/default/objects/Case/fields/BSP_Addressee_Address__c.field-meta.xml
<CustomField>
    <fullName>BSP_Addressee_Address__c</fullName>
    <label>BSP Addressee Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>