force-app/main/default/objects/Case/fields/BSP_Addressee_Name__c.field-meta.xml
<CustomField>
    <fullName>BSP_Addressee_Name__c</fullName>
    <label>BSP Addressee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>