force-app/main/default/objects/Case/fields/BSPLodgementDate__c.field-meta.xml
<CustomField>
    <fullName>BSPLodgementDate__c</fullName>
    <label>Lodgement Date</label>
    <type>Date</type>
</CustomField>