force-app/main/default/objects/Case/fields/Business_Solutions_Customer__c.field-meta.xml
<CustomField>
    <fullName>Business_Solutions_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Solutions Customer</label>
    <type>Checkbox</type>
</CustomField>