force-app/main/default/objects/Case/fields/Business_Solutions_Team__c.field-meta.xml
<CustomField>
    <fullName>Business_Solutions_Team__c</fullName>
    <formula>IF(Owner_is_Queue__c = FALSE, Text(Owner:User.StarTrack_Team_Name__c)  ,  Owner:Queue.QueueName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Solutions Team</label>
    <type>Text</type>
</CustomField>