force-app/main/default/objects/Case/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>.</description>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Australia Post</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>CSC - Aegis</fullName>
            </value>
            <value>
                <fullName>CSC - Brisbane</fullName>
            </value>
            <value>
                <fullName>CSC - Melbourne</fullName>
            </value>
            <value>
                <fullName>I.T.</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>StarTrack Courier</fullName>
            </value>
            <value>
                <fullName>ECG</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Parcels</fullName>
            </value>
            <value>
                <fullName>Postal Service</fullName>
            </value>
            <value>
                <fullName>Trusted Services</fullName>
            </value>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>StarTrack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>