force-app/main/default/objects/Case/fields/Bypass_Data_enforcement__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Data_enforcement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SSSW</description>
    <label>Bypass Data enforcement?</label>
    <type>Checkbox</type>
</CustomField>