force-app/main/default/objects/Case/fields/BypassPreferredAgent__c.field-meta.xml
<CustomField>
    <fullName>BypassPreferredAgent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is used by the Routing Engine to bypass the Preferred Agent logic. It will be set to False whenever the owner of the case changes from a Queue to a User.</description>
    <label>Bypass Preferred Agent</label>
    <type>Checkbox</type>
</CustomField>