force-app/main/default/objects/Case/fields/ByPassRoutingRulesOnCreation__c.field-meta.xml
<CustomField>
    <fullName>ByPassRoutingRulesOnCreation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field serves as a universal routing bypass flag for case creation only. Routing on case updates should not take this flag into consideration.</description>
    <label>Bypass Routing Rules On Creation</label>
    <type>Checkbox</type>
</CustomField>