force-app/main/default/objects/Case/fields/ByPassWorkflowRulesOnCreation__c.field-meta.xml
<CustomField>
    <fullName>ByPassWorkflowRulesOnCreation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field serves as a universal workflow rule bypass flag for case creation only. Workflow rule on case updates should not take this flag into consideration.</description>
    <inlineHelpText>This field serves as a universal workflow rule bypass flag for case creation only. Workflow rule on case updates should not take this flag into consideration.</inlineHelpText>
    <label>Bypass Workflow Rules On Creation</label>
    <type>Checkbox</type>
</CustomField>