force-app/main/default/objects/Case/fields/Calc_Case_Consignment__c.field-meta.xml
<CustomField>
    <fullName>Calc_Case_Consignment__c</fullName>
    <formula>ArticleTest__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Consignment</label>
    <type>Text</type>
</CustomField>