force-app/main/default/objects/Case/fields/Calc_Case_Subject__c.field-meta.xml
<CustomField>
    <fullName>Calc_Case_Subject__c</fullName>
    <formula>CASE(Origin, &apos;Email&apos;, &apos;Re: &apos;&amp; Subject, Subject)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calc Case Subject</label>
    <type>Text</type>
</CustomField>