force-app/main/default/objects/Case/fields/Calc_Link_Account__c.field-meta.xml
<CustomField>
    <fullName>Calc_Link_Account__c</fullName>
    <description>StarTrack - Link to Account Id</description>
    <formula>Account.Name</formula>
    <label>Legal Entity Name</label>
    <type>Text</type>
</CustomField>