force-app/main/default/objects/Case/fields/Calc_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Calc_Owner_Name__c</fullName>
    <description>StarTrack - Unclickable Case Owner Name</description>
    <formula>IF(ISBLANK(Owner:User.Id), Owner:Queue.QueueName, Owner:User.FirstName &amp; &apos; &apos; &amp; Owner:User.LastName)</formula>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>