force-app/main/default/objects/Case/fields/Call_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Call_Purpose__c</fullName>
    <description>Client&apos;s intent for calling</description>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Track &amp; Trace</fullName>
            </value>
            <value>
                <fullName>Driver ETA</fullName>
            </value>
            <value>
                <fullName>Card Left</fullName>
            </value>
            <value>
                <fullName>Pick up</fullName>
            </value>
            <value>
                <fullName>Request update</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payroll Enquiry</fullName>
            </value>
            <value>
                <fullName>HR Enquiry</fullName>
            </value>
            <value>
                <fullName>New Business Query</fullName>
            </value>
            <value>
                <fullName>Consumable Orders</fullName>
            </value>
            <value>
                <fullName>Special Services Enquiry</fullName>
            </value>
            <value>
                <fullName>Credit Enquiry</fullName>
            </value>
            <value>
                <fullName>I.T. Issue</fullName>
            </value>
            <value>
                <fullName>Account Management Enquiry</fullName>
            </value>
            <value>
                <fullName>Personal Call for Staff Member</fullName>
            </value>
            <value>
                <fullName>Next Flight</fullName>
            </value>
            <value>
                <fullName>Dangerous Goods</fullName>
            </value>
            <value>
                <fullName>StarTrack Branch Enquiry</fullName>
            </value>
            <value>
                <fullName>Voice Of Customer</fullName>
            </value>
            <value>
                <fullName>Business Solutions</fullName>
            </value>
            <value>
                <fullName>Late Delivery</fullName>
            </value>
            <value>
                <fullName>Security Incident</fullName>
            </value>
            <value>
                <fullName>Transit Warranty Enquiry</fullName>
            </value>
            <value>
                <fullName>Quoting/Pricing</fullName>
            </value>
            <value>
                <fullName>Credit Claim</fullName>
            </value>
            <value>
                <fullName>POD</fullName>
            </value>
            <value>
                <fullName>Delivery in Progress</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Controlled Returns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>