force-app/main/default/objects/Case/fields/CallBackRequired__c.field-meta.xml
<CustomField>
    <fullName>CallBackRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SSSW .</description>
    <inlineHelpText>If this is Checked, the Customer would like to be called about this Case before closure.</inlineHelpText>
    <label>Call Back Required</label>
    <type>Checkbox</type>
</CustomField>