force-app/main/default/objects/Case/fields/Caller_Data_Capture_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Caller_Data_Capture_DateTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>StarTrack Caller Data Capture DateTime used in a formula field which is then read for the purposes of a process builder scheduled action to asynchronously process the task</description>
    <label>Caller Data Capture DateTime</label>
    <type>DateTime</type>
</CustomField>