force-app/main/default/objects/Case/fields/Callers_Data_Change__c.field-meta.xml
<CustomField>
    <fullName>Callers_Data_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>StarTrack Caller values changed (triggers the process builder to record a task asynchronously using the Caller Data Capture datetime field)</description>
    <label>Create Call Log</label>
    <type>Checkbox</type>
</CustomField>