force-app/main/default/objects/Case/fields/Case_Owner_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Business_Unit__c</fullName>
    <formula>Owner:User.Business_Unit_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner Business Unit</label>
    <type>Text</type>
</CustomField>