force-app/main/default/objects/Case/fields/Case_Owner_Title__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Title__c</fullName>
    <formula>Owner:User.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner Title</label>
    <type>Text</type>
</CustomField>