force-app/main/default/objects/Case/fields/Case_RecordType_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_RecordType_Name__c</fullName>
    <description>Name of the Case RecordType</description>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case RecordType Name</label>
    <type>Text</type>
</CustomField>