force-app/main/default/objects/Case/fields/Case_Reopen_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Reopen_Date__c</fullName>
    <label>Case Reopen Date</label>
    <type>DateTime</type>
</CustomField>