force-app/main/default/objects/Case/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <formula>IMAGE( 
CASE(RecordType.Name,
&apos;Transit Warranty Claim&apos;, &apos;/resource/StarTrackCaseIcons/Transit.png&apos;, 
&apos;Sales Enquiry&apos;, &apos;/resource/StarTrackCaseIcons/Sales.png&apos;, 
&apos;Pickup Booking Enquiry&apos;, &apos;/resource/StarTrackCaseIcons/Pickup.png&apos;,
&apos;Credit Dispute Claim&apos;, &apos;/resource/StarTrackCaseIcons/Credit.png&apos;,
&apos;Delivery Enquiry&apos;, &apos;/resource/StarTrackCaseIcons/Delivery.png&apos;,
&apos;General Enquiry&apos;, &apos;/resource/StarTrackCaseIcons/General.png&apos;,
&apos;StarTrack Business Solutions Communications&apos;, &apos;/resource/StarTrackCaseIcons/BSCEmail.png&apos;, &apos;/resource/StarTrackCaseIcons/Other.png&apos;),&apos;No Image&apos; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>