force-app/main/default/objects/Case/fields/Case_Update__c.field-meta.xml
<CustomField>
    <fullName>Case_Update__c</fullName>
    <label>Case Update</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Comment</fullName>
            </value>
            <value>
                <fullName>New Email Received</fullName>
            </value>
            <value>
                <fullName>Operations Responded</fullName>
            </value>
            <value>
                <fullName>Waiting on Investigator</fullName>
            </value>
            <value>
                <fullName>Customer Responded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>