force-app/main/default/objects/Case/fields/CaseOriginator__c.field-meta.xml
<CustomField>
    <fullName>CaseOriginator__c</fullName>
    <description>SSSW</description>
    <label>Case Originator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
                <default>true</default>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Sender</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Addressee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>